--- a/cata_service/src/main/resources/static/views/delete.html
+++ b/cata_service/src/main/resources/static/views/delete.html
@@ -8,5 +8,37 @@
 </head>
 
 
-id :<input type="text" ng-model="idSupprime" >
-	<button ng-click="supprimerProduits()">supprimer</button>
+
+
+	
+<div class="container spacer">
+	
+	<div class="panel panel-default" style="margin-left: 30%;margin-right: 30%" >
+	
+		<div class="panel-heading">Suppression </div>
+		<div class="panel-body">
+			<div class="form-group">
+				<label>Id:</label>	
+				<input class="form-control" type="number" ng-model="idSupprime" >
+				<br>
+				<button class="btn btn-primary" ng-click="btnSupprime()">Supprimer</button>
+			</div>
+			
+		</div>
+	
+	</div>
+	
+	<div class="panel panel-default" style="margin-left: 30%;margin-right: 30%" ng-if="modeSupp==1" >
+	
+		<div class="panel-heading">Validation de suppression </div>
+		<div class="panel-body">
+			<div class="form-group" >
+				<label>{{messageSuppresion}}</label>	
+				
+			</div>
+			
+		</div>
+	
+	</div>
+	
+</div>
